--- a/templates/TaxCalculator.html
+++ b/templates/TaxCalculator.html
@@ -56,6 +56,14 @@
         body{
             background-image: url('OfficeImage4.jpg');
         }
+        .choice-box{
+            border: solid black;
+            border-radius:20px;
+            margin: auto;
+            width: 200px;
+            height: 50px;
+            padding: 10px 0px 20px 10px;
+        }
 
     </style>
 </head>
@@ -96,6 +104,12 @@
     <br>
 
     <form>
+    <div class="choice-box">
+        <input type="radio">
+        <label>Monthly</label>
+        <input type="radio">
+        <label>Yearly</label>
+    </div>
     <div class="grid-upper box1">
         <div>
             <h2> Taxable Income </h2>
