--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -22,6 +22,36 @@
           border-radius: 10px;
           box-shadow: 5px 5px 10px;
         }
+        .photo1{
+          margin: auto;
+          width: 300px;
+          height: 400px;
+          background-repeat: no-repeat;
+          background-size: 1000px 1000px;
+          background-position: center;
+          padding: 10%;
+          background-image: url('https://d.newsweek.com/en/full/1831281/florida-pastor-james-cusick-arrested-capitol-riot.jpg')
+        }
+        .photo2{
+          margin: auto;
+          width: 300px;
+          height: 400px;
+          background-repeat: no-repeat;
+          background-size: 1000px 1000px;
+          background-position: center;
+          padding: 10%;
+          background-image: url('https://www.businessinsider.in/photo/82010466/capitol-riot-bullhorn-lady-appeared-in-a-video-to-wear-a-useless-mesh-mask-after-a-judge-ordered-her-to-wear-one-as-a-part-of-her-release.jpg?imgsize=407037');
+        }
+        .photo3{
+          margin: auto;
+          width: 300px;
+          height: 400px;
+          background-repeat: no-repeat;
+          background-size: 500px 500px;
+          background-position: center;
+          padding: 10%;
+          background-image: url('https://d.newsweek.com/en/full/1024943/07-15-18-pussyriotworldcup.jpg')
+        }
     </style>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -74,21 +104,21 @@
 
     <div class="grid">
         <div>
-            <h3> Riot in Europe </h3>
-            <img src="riot1.jpg">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore expedita iusto voluptatibus eum quas at placeat, totam mollitia nulla hic esse sit suscipit, alias blanditiis quod debitis consequatur unde optio.</p>
+            <h3> People arrested in Capitol riot </h3>
+            <div class="photo1"></div>
+            <p>Federal authorities received a tip tying the two pastors to the Capitol riot from an anonymous individual in late January. In March, a second anonymous individual told authorities by telephone that Lesperance was also with them inside the Capitol building rotunda, according to charging documents.</p>
             <button class="box">See more..</button>
         </div>
         <div>
-            <h3> Riot in USA </h3>
-            <img src="riot2.jpg">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore expedita iusto voluptatibus eum quas at placeat, totam mollitia nulla hic esse sit suscipit, alias blanditiis quod debitis consequatur unde optio.</p>
+            <h3> Trump supporters climbed US Capitol</h3>
+            <div class="photo2"></div>
+            <p>Supporters of President Donald Trump climb the West wall of the the U.S. Capitol on Wednesday, Jan. 6, 2021, in Washington. Rachel Powell, the Pennsylvania woman known as "bullhorn lady" for using a megaphone during her admitted participation at the January 6 siege at the US Capitol, appeared to be wearing a mesh mask in a video posted by a Pennsylvania bookstore, Law&Crime first reported Friday.</p>
             <button class="box">See more..</button>
         </div>
         <div>
-            <h3> Riot in Australia </h3>
-            <img src="riot3.jpg">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore expedita iusto voluptatibus eum quas at placeat, totam mollitia nulla hic esse sit suscipit, alias blanditiis quod debitis consequatur unde optio.</p>
+            <h3> World cup final protest </h3>
+            <div class="photo3"></div>
+            <p>The four people, dressed in old-fashioned-looking police uniforms, ran onto the field in the 52nd minute, according to The Associated Press. A female protester got to center field and gave a double high-five to France forward Kylian Mbappe shortly after he had a shot saved. Meanwhile, Croatia defender Dejan Lovren was able to push down a male protester, allowing a steward to catch him. All four people were detained by stewards.</p>
             <button class="box">See more..</button>
         </div>
     </div>
