--- a/templates/TaxCalculator.html
+++ b/templates/TaxCalculator.html
@@ -54,7 +54,7 @@
             text-align: center;
         }
         body{
-            background-image: url('OfficeImage4.jpg');
+            background-image: url('https://webuserblog.com/wp-content/uploads/2016/08/What-is-the-ideal-planning-of-office-space.jpg');
         }
         .choice-box{
             border: solid black;
@@ -71,28 +71,28 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="float: right">
         <div class="container-fluid">
-
+          
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/taxinfo">Tax Info</a>
+                <a class="nav-link" href="#">Tax Info</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
                 <a class="nav-link" href="#">Login</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
                 <a class="nav-link" href="#">Sign Up</a>
               </li>
             </ul>
           </div>
         </div>
-      </nav>
+      </nav>    
 
     <br>
     <br>
@@ -102,7 +102,7 @@
         <h1 class="text-center" style="height: 50px"> Tax Calculator System </h1>
     </div>
     <br>
-
+    
     <form>
     <div class="choice-box">
         <input type="radio">
@@ -117,7 +117,7 @@
                 <h3> Monthly Salary</h3>
                 <input type="text">
             </div>
-
+            
             <div class="text-box">
                 <h3> Housing Rent Allowance</h3>
                 <input type="text">
@@ -129,7 +129,7 @@
             </div>
 
             <div class="text-box">
-                <h3> Transportation Alloance </h3>
+                <h3> Transportation Allowance </h3>
                 <input type="text">
             </div>
 
@@ -157,10 +157,10 @@
         </div>
 
     </div>
-
+    
     <br>
     <div class="grid-lower">
-        <button> Calculate </button>
+        <button> Calculate </button>                                     
     </div>
     <div class="grid-lower">
         <div class="text-box box1">
