--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -8,9 +8,9 @@
 
     <style>
         .grid{
-            background-color: rgb(131, 177, 180);
+            background-color: gray;
             display: grid;
-            grid-template-columns: 33% 33% 33%; 
+            grid-template-columns: 33% 33% 33%;
             box-shadow: 10px 10px 10px;
         }
         .center{
@@ -52,61 +52,31 @@
           padding: 10%;
           background-image: url('https://d.newsweek.com/en/full/1024943/07-15-18-pussyriotworldcup.jpg')
         }
-        .photo4{
-          margin: auto;
-          width: 300px;
-          height: 400px;
-          background-repeat: no-repeat;
-          background-size: 500px 500px;
-          background-position: center;
-          padding: 10%;
-          background-image: url('https://tradebrains.in/wp-content/uploads/2018/07/latest-financial-news-1024x684.jpeg')
-        }
-        .photo5{
-          margin: auto;
-          width: 300px;
-          height: 400px;
-          background-repeat: no-repeat;
-          background-size: 500px 500px;  
-          background-position: center;
-          padding: 10%;
-          background-image: url('https://www.union-news.co.uk/wp-content/uploads/2016/02/financial_times.jpg')
-        }
-        .photo6{
-          margin: auto;
-          width: 300px;
-          height: 400px;
-          background-repeat: no-repeat;
-          background-size: 500px 500px;
-          background-position: center;
-          padding: 10%;
-          background-image: url('https://www.banking24seven.com/wp-content/uploads/2018/09/Finance-news.jpg')
-        }
-        h3{
-          text-align: center;
-        }
     </style>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="float: right; position: fixed; top:0px; right: 0px;">
         <div class="container-fluid">
-          
+
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
+                <a class="nav-link" href="/news">Financial News</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tax Calculator</a>
+                <a class="nav-link" href="/taxinfo">Tax Info</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/calculator">Tax Calculator</a>
               </li>
               <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
                 <a class="nav-link" href="#">Login</a>
@@ -117,7 +87,7 @@
             </ul>
           </div>
         </div>
-    </nav>    
+    </nav>
 
     <div class="center" style="position: relative; top: 70px;">
         <h2> Financial News </h2>
@@ -131,21 +101,21 @@
     <br>
     <br>
     <br>
-    
+
     <div class="grid">
-        <div style="padding: 50px; border:solid gray; border-width:10px; border-radius:20px;">
+        <div>
             <h3> People arrested in Capitol riot </h3>
             <div class="photo1"></div>
             <p>Federal authorities received a tip tying the two pastors to the Capitol riot from an anonymous individual in late January. In March, a second anonymous individual told authorities by telephone that Lesperance was also with them inside the Capitol building rotunda, according to charging documents.</p>
             <button class="box">See more..</button>
         </div>
-        <div style="padding: 50px; border:solid gray; border-width:10px; border-radius:20px;">
+        <div>
             <h3> Trump supporters climbed US Capitol</h3>
             <div class="photo2"></div>
             <p>Supporters of President Donald Trump climb the West wall of the the U.S. Capitol on Wednesday, Jan. 6, 2021, in Washington. Rachel Powell, the Pennsylvania woman known as "bullhorn lady" for using a megaphone during her admitted participation at the January 6 siege at the US Capitol, appeared to be wearing a mesh mask in a video posted by a Pennsylvania bookstore, Law&Crime first reported Friday.</p>
             <button class="box">See more..</button>
         </div>
-        <div style="padding: 50px; border:solid gray; border-width:10px; border-radius:20px;">
+        <div>
             <h3> World cup final protest </h3>
             <div class="photo3"></div>
             <p>The four people, dressed in old-fashioned-looking police uniforms, ran onto the field in the 52nd minute, according to The Associated Press. A female protester got to center field and gave a double high-five to France forward Kylian Mbappe shortly after he had a shot saved. Meanwhile, Croatia defender Dejan Lovren was able to push down a male protester, allowing a steward to catch him. All four people were detained by stewards.</p>
@@ -163,23 +133,23 @@
     <br>
 
     <div class="grid">
-        <div style="padding: 50px; border:solid gray; border-width:10px; border-radius:20px;">
+        <div>
           <h3> News1 </h3>
-          <div class="photo4"></div>
+          <img src="news1.jpg">
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore expedita iusto voluptatibus eum quas at placeat, totam mollitia nulla hic esse sit suscipit, alias blanditiis quod debitis consequatur unde optio.</p>
           <button class="box"> See more..</button>
         </div>
 
-        <div style="padding: 50px; border:solid gray; border-width:10px; border-radius:20px;">
+        <div>
           <h3> News2 </h3>
-          <div class="photo5"></div>
+          <img src="news2.jpg">
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore expedita iusto voluptatibus eum quas at placeat, totam mollitia nulla hic esse sit suscipit, alias blanditiis quod debitis consequatur unde optio.</p>
           <button class="box"> See more..</button>
         </div>
 
-        <div style="padding: 50px; border:solid gray; border-width:10px; border-radius:20px;">
+        <div>
         <h3> News3 </h3>
-          <div class="photo6"></div>
+          <img src="news3.jpg">
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore expedita iusto voluptatibus eum quas at placeat, totam mollitia nulla hic esse sit suscipit, alias blanditiis quod debitis consequatur unde optio.</p>
           <button class="box"> See more..</button>
         </div>
