login logout and signup logic

--- a/templates/TaxCalculator.html
+++ b/templates/TaxCalculator.html
@@ -83,12 +83,23 @@
               <li class="nav-item">
                 <a class="nav-link" href="/taxinfo">Tax Info</a>
               </li>
-              <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
-                <a class="nav-link" href="#">Login</a>
+                {%if request.user.is_authenticated%}
+                <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
+                <a class="nav-link" href="/accounts/dashboard/">{{ request.user.username }}</a>
               </li>
               <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link" href="/accounts/logout/">Logout</a>
               </li>
+                {%else%}
+                <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
+                <a class="nav-link" href="/accounts/login/">Login</a>
+              </li>
+              <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
+                <a class="nav-link" href="/accounts/signup/">Sign Up</a>
+              </li>
+
+                {%endif%}
+
             </ul>
           </div>
         </div>
@@ -106,16 +117,10 @@
     <form action="/calculator/incometax" method="post">
         {% csrf_token %}
 
-    <form>
-    <div class="choice-box">
-        <input type="radio">
-        <label>Monthly</label>
-        <input type="radio">
-        <label>Yearly</label>
-    </div>
     <div class="grid-upper box1">
         <div>
             <h2> Taxable Income </h2>
+
             <div class="text-box">
                 <h3> Monthly Salary</h3>
                 <input type="number" min="0" name="monthlySalary" value="{{monthlySalary}}">
@@ -157,6 +162,16 @@
                 <h3> Life Insurance</h3>
                 <input type="number" min="0" name="lifeInsurance" value="{{lifeInsurance}}">
             </div>
+            <br>
+                <div class="text-box">
+                <h3>Marital Status</h3>
+                <div class="choice-box">
+                <input type="radio" name="maritalStatus" value="s">
+                <label>Single</label>
+                <input type="radio" name="maritalStatus" value="m">
+                <label>Married</label>
+                </div>
+                    </div>
         </div>
 
     </div>
