--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -100,19 +100,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
+                <a class="nav-link" href="/accounts/dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tax Calculator</a>
+                <a class="nav-link" href="/taxinfo">Tax Info</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/calculator">Tax Calculator</a>
               </li>
               <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="/accounts/login">Login</a>
               </li>
               <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link" href="/accounts/signup">Sign Up</a>
               </li>
             </ul>
           </div>
