--- a/templates/TaxCalculator.html
+++ b/templates/TaxCalculator.html
@@ -14,24 +14,35 @@
             display: grid;
             grid-template-columns: 50% 50%;
             opacity: 0.8;
-            box-shadow: 10px 10px 10px;
         }
         .grid-lower{
             width: 100%;
             display: grid;
             grid-template-columns: 100%;
-            padding-left: 500px;
-            padding-right: 500px;
+            padding-left: 600px;
+            padding-right: 600px;
             padding-bottom: 20px;
         }
         .div-lower{
             padding: 20px 100px 20px 100px;
         }
         .box1{
-            background-color: gray;
+            background-color: rgb(245, 178, 168);
             border: 5px;
             border-radius: 25px;
             border-style: solid;
+            width: 500px;
+            margin: auto;
+        }
+        .box2{
+            background: linear-gradient(130deg, #CCFFFF, #FFCCCC);
+            width: 1000px;
+            border: 5px;
+            border-radius: 25px;
+            border-style: solid;
+            margin: auto;
+            padding: 20px;
+            box-shadow: 10px 10px 10px;
         }
         .text-box{
             display: grid;
@@ -45,11 +56,11 @@
         }
         h2{
             font-family: Georgia, 'Times New Roman', Times, serif;
-            font-size: 26px;
+            font-size: 22px;
             text-align: center;
         }
         h3{
-            font-size: 22px;
+            font-size: 18px;
             font-family: Georgia, 'Times New Roman', Times, serif;
             text-align: center;
         }
@@ -69,42 +80,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="float: right">
-        <div class="container-fluid">
-
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/taxinfo">Tax Info</a>
-              </li>
-                {%if request.user.is_authenticated%}
-                <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
-                <a class="nav-link" href="/accounts/dashboard/">{{ request.user.username }}</a>
-              </li>
-              <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
-                <a class="nav-link" href="/accounts/logout/">Logout</a>
-              </li>
-                {%else%}
-                <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
-                <a class="nav-link" href="/accounts/login/">Login</a>
-              </li>
-              <li class="nav-item" style="background-color:rgba(224, 103, 94, 0.815)">
-                <a class="nav-link" href="/accounts/signup/">Sign Up</a>
-              </li>
-
-                {%endif%}
-
-            </ul>
-          </div>
-        </div>
-      </nav>
-
+    {% include "navigationBar.html" %}
     <br>
     <br>
     <br>
@@ -114,12 +90,14 @@
     </div>
     <br>
 
+    <div class="box2">
     <form action="/calculator/incometax" method="post">
         {% csrf_token %}
 
-    <div class="grid-upper box1">
+    <div class="grid-upper">
         <div>
             <h2> Taxable Income </h2>
+            <hr>
 
             <div class="text-box">
                 <h3> Monthly Salary</h3>
@@ -154,6 +132,7 @@
 
         <div>
             <h2> Deductibles </h2>
+            <hr>
             <div class="text-box">
                 <h3> Medical Insurance</h3>
                 <input type="number" min="0" name="medicalInsurance" value="{{medicalInsurance}}">
@@ -162,7 +141,7 @@
                 <h3> Life Insurance</h3>
                 <input type="number" min="0" name="lifeInsurance" value="{{lifeInsurance}}">
             </div>
-            <br>
+             <br>
                 <div class="text-box">
                 <h3>Marital Status</h3>
                 <div class="choice-box">
@@ -173,6 +152,8 @@
                 </div>
                     </div>
         </div>
+        </div>
+
 
     </div>
 
@@ -180,7 +161,7 @@
     <div class="grid-lower">
         <button> Calculate </button>
     </div>
-    <div class="grid-lower">
+    <div style="margin: auto; width: 500px;">
         <div class="text-box box1">
             <h3> Income Tax: </h3>
             <input type="text" value="{{tax}}" disabled>
