--- a/templates/TaxInfo.html
+++ b/templates/TaxInfo.html
@@ -9,86 +9,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <style>
-        .grid-upper{
-            width: 100%;
-            display: grid;
-            grid-template-columns: 50% 50%;
-            opacity: 0.8;
-            box-shadow: 10px 10px 10px;
-        }
-        .grid-lower{
-            width: 100%;
-            display: grid;
-            grid-template-columns: 100%;
-            padding-left: 500px;
-            padding-right: 500px;
-            padding-bottom: 20px;
-        }
-        .div-lower{
-            padding: 20px 100px 20px 100px;
-        }
         .box1{
-            background-color: gray;
+            background-color: rgb(245, 178, 168);
             border: 5px;
             border-radius: 25px;
             border-style: solid;
+            width: 700px;
+            margin: auto;
         }
-        .text-box{
-            display: grid;
-            grid-template-columns: 50% 50%;
+        .table1{
+          width: 500px;
+          margin: auto;
+          position: relative;
+          top: 75px;
+          background: linear-gradient(130deg, #CCFFFF, #FFCCCC);
         }
-        .text-center{
-            text-align: center;
-        }
-        h1{
-            font-family: Georgia, 'Times New Roman', Times, serif;
-        }
-        h2{
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            font-size: 26px;
-            text-align: center;
-        }
-        h3{
-            font-size: 22px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            text-align: center;
+        .table2{
+          width: 500px;
+          margin: auto;
+          position: relative;
+          top: 200px;
+          background: linear-gradient(130deg, #CCFFFF, #FFCCCC);
         }
         body{
-            background-image: url('OfficeImage4.jpg');
+          font-family: Georgia, 'Times New Roman', Times, serif;
+          background: url('https://insights.som.yale.edu/sites/default/files/styles/rectangle_xl/public/insights/background/sharing-bg.jpg?h=d0d46503&itok=Cu02-DqM');
         }
-        .center {
-             margin-left: auto;
-             margin-right: auto;
-        }
-
 
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="float: right">
-        <div class="container-fluid">
-
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tax Info</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+   {% include "navigationBar.html" %}
   <br>
     <br>
     <br>
@@ -99,8 +50,10 @@
     <br>
 <div>
 
-    <table border = "1" cellpadding = "5" cellspacing = "5" class="center">
-        <h3 class="text-center">Tax Information For Individuals (Unmarried)</h3>
+   <table border="5px" cellpadding = "5" cellspacing = "5" class="table1">
+         <tr>
+        <th colspan="2"><h3> For Un-Married Status </h3></th>
+      </tr>
 
         <tr>
 
@@ -123,14 +76,15 @@
                 Next {{record.taxableIncomeStr}}
                 {%endif%}
             </td>
-            <td align="right"> {{record.taxRate}} </td>
+            <td align="center"> {{record.taxRate}} </td>
         </tr>
         {%endfor%}
     </table>
     <br>
-    <table border = "1" cellpadding = "5" cellspacing = "5" class="center">
-        <h3 class="text-center">Tax Information For Married </h3>
-
+    <table border="5px" cellpadding = "5" cellspacing = "5" class="table2">
+  <tr>
+    <th colspan="2"><h3> For Married Status </h3></th>
+  </tr>
         <tr>
 
             <th>
@@ -152,7 +106,7 @@
                 Next {{record.taxableIncomeStr}}
                 {%endif%}
             </td>
-            <td align="right"> {{record.taxRate}} </td>
+            <td align="center"> {{record.taxRate}} </td>
         </tr>
         {%endfor%}
     </table>
