--- a/templates/UserDashboard.html
+++ b/templates/UserDashboard.html
@@ -56,27 +56,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="float: right; position: fixed; top:0px; right: 0px;">
-        <div class="container-fluid">
-          
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tax Calculator</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tax Info</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
+      {% include "navigationBar.html" %}
 
     <div class="topic">
       <h2>User Dashboard</h2>
@@ -84,25 +64,26 @@
     
     <div class="upper-div">
       <h3 style="padding: 0px;">User Details</h3>
-      <p>Name: </p>
-      <p>Email: </p>
-      <p>Phone number: </p>
+      <p>Name:{{ account.first_name }} {{ account.last_name }}</p>
+      <p>Email:{{ account.email }} </p>
+      <p>Phone number:{{ account.phone }} </p>
+        <a href="/accounts/profile"> Edit </a>
     </div>
 
-    <div class="box">
-        <div class="boxes">
-            <h3>User Management</h3>
-            <hr>
-            <p>Number of Users: </p>
-            <p>Pending Users: </p>
-        </div>
+<!--    <div class="box">-->
+<!--        <div class="boxes">-->
+<!--            <h3>User Management</h3>-->
+<!--            <hr>-->
+<!--            <p>Number of Users: </p>-->
+<!--            <p>Pending Users: </p>-->
+<!--        </div>-->
 
-        <div class="boxes">
-            <h3>NEWS Management</h3>
-            <hr>
-            <p>NEWS this week: </p>
-            <p>Total News: </p>
-        </div>
-    </div>
+<!--        <div class="boxes">-->
+<!--            <h3>NEWS Management</h3>-->
+<!--            <hr>-->
+<!--            <p>NEWS this week: </p>-->
+<!--            <p>Total News: </p>-->
+<!--        </div>-->
+<!--    </div>-->
 </body>
 </html>
